Bug 207028 - Unread messages number is shown incorrectly in RTL
Summary: Unread messages number is shown incorrectly in RTL
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: folder list (other bugs)
Version First Reported In: 1.12.1
Platform: Ubuntu Unspecified
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: rtl
Depends on:
Blocks:
 
Reported: 2009-09-11 04:30 UTC by OsamaK
Modified: 2009-09-11 22:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The Arabic KMail interface (16.44 KB, image/png)
2009-09-11 04:31 UTC, OsamaK
Details
English KMail interface (16.03 KB, image/png)
2009-09-11 04:32 UTC, OsamaK
Details

Note You need to log in before you can comment on or make changes to this bug.
Description OsamaK 2009-09-11 04:30:50 UTC
Version:            (using KDE 4.3.1)
Installed from:    Ubuntu Packages

When I use the Arabic KMail interface, the unread messages number is show incorrectly in a way making it hard to read.

I'll attached two screenshots, on the Arabic interface and on the original Enlgish one.
Comment 1 OsamaK 2009-09-11 04:31:43 UTC
Created attachment 36853 [details]
The Arabic KMail interface
Comment 2 OsamaK 2009-09-11 04:32:27 UTC
Created attachment 36854 [details]
English KMail interface
Comment 3 Christophe Marin 2009-09-11 08:32:47 UTC
Confirmed in trunk w/ kmail --reverse
Comment 4 Martin Koller 2009-09-11 22:02:45 UTC
SVN commit 1022455 by mkoller:

BUG: 207028

fix display of unread message count in right-to-left language


 M  +5 -3      foldertreewidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1022455
Comment 5 Martin Koller 2009-09-11 22:04:37 UTC
SVN commit 1022456 by mkoller:

Backport r1022455 by mkoller from trunk to the 4.3 branch:

CCBUG: 207028

fix display of unread message count in right-to-left language



 M  +5 -3      foldertreewidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1022456