BUG: 207028

fix display of unread message count in right-to-left language

svn path=/trunk/KDE/kdepim/; revision=1022455